--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://magicyang876.github.io/MyBlog/'
+baseURL = 'https://magicyang876.github.io'
 contentdir= "content"
 layoutdir= "layouts"
 publishdir= "public"
